--- a/sass/layout/_process.scss
+++ b/sass/layout/_process.scss
@@ -2,7 +2,7 @@
     margin: 0 5%;
     margin-bottom: 4%;
     @media (max-width: $phone) {
-        padding: 8% 2%;
+        padding: 8% 0;
     }
     & h2 {
         @media (max-width: $phone) {
